# yoric

./: Cargo.toml
yoric_client/: Cargo.toml  log  theme.toml
yoric_client/src/: app.rs  canvas.rs  client.rs  main.rs  tweaks.rs
yoric_core/: Cargo.toml
yoric_core/src/: lib.rs
yoric_server/: Cargo.toml
yoric_server/src/: game.rs  main.rs
