[package]
name = "yoric_client"
version = "0.1.0"
edition = "2021"
workspace = ".."

[dependencies]
url = "2.0.0"
bincode = "*"
log = "0.4"
env_logger = "0.8.4"
yoric_core = { path = "../yoric_core" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }
tungstenite = "*"
tokio-tungstenite = "*"
futures = "*"
cursive = { version = "*", features = ["toml", "crossterm-backend"] }
